[tool.poetry]
name = "pydog"
version = "0.1.0"
description = ""
authors = ["渐之 <542884552@qq.com>"]
readme = "README.md"
packages = [
    { include = "pydog" },
    { include = "examples" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiostream = "^0.5.2"
aiomysql = "^0.2.0"
codetiming = "^1.4.0"
parsel = "^1.8.1"
loguru = "^0.7.2"
aiohttp = "^3.8.6"
pyee = "^11.0.1"
playwright = "^1.39.0"
sqlalchemy = "^2.0.22"
fastapi = "^0.104.1"
pydantic-settings = "^2.0.3"

[tool.poetry.scripts]
simple_demo = "examples.simple_demo:main"
sqlalchemy_demo = "examples.sqlalchemy_demo:main"
offset = "examples.sqlalchemy_offset_demo:main"

[[tool.poetry.source]]
name = "tsh"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
